Bug 532617 -moz-background-size does not always get serialised r=dbaron